--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -22,7 +22,7 @@ La relaxation que nous proposons s'extrait de la simulation neurone par neurone 
 Le modèle CxSOM est détaillé au chapitre \ref{chap:modele}, puis le mécanisme de relaxation a été observé de façon détaillée au chapitre \ref{chap:relaxation} afin de mieux comprendre la notion de BMU résultant de l'architecture de cartes.
 
 La suite de la thèse présente une méthode d'étude de l'architecture et d'analyse de son apprentissage.
-Il nous a fallu déterminer un domaine d'étude des mécanismes de l'architecture générique que nous avons proposée. Nous avons choisi de nous intéresser à des données multimodales, l'aspect multisensoriel étant une motivation pour créer des architectures non-hiérarchique. 
+Il nous a fallu déterminer un domaine d'étude des mécanismes de l'architecture générique que nous avons proposée. Nous avons choisi de nous intéresser à des données multimodales, l'aspect multisensoriel étant une motivation pour créer des architectures non-hiérarchiques. 
 Chaque carte de l'architecture prend alors une entrée externe.
 Le but de l'architecture est à la fois pour chaque module d'apprendre une représentation de leur entrée externe,  tout en apprenant les relations entre les entrées au sein de l'architecture. 
 Nous avons cherché à mettre en lumière comment CxSOM encode les relations entre entrées au sein de l'architecture et comment observer et quantifier cet apprentissage.
@@ -94,3 +94,6 @@ Une direction d'application d'architectures de cartes peut être la construction
 
 
 Enfin, l'architecture que nous avons proposée s'appuie uniquement sur des cartes auto-organisatrices. Nous pouvons envisager de coupler les mécanismes induits par l'architecture de cartes à d'autres mécanismes d'apprentissage non-supervisés, comme de l'apprentissage par renforcement ou des auto-encodeurs.
+
+
+
