--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,5 +1,5 @@
-\ThesisTitle{\'Etude d'un modèle d'architecture modulaire non-hiérarchique de cartes auto-organisatrices s'appuyant sur une recherche de consensus}
-\ThesisDate{ ? juin 2023}
+\ThesisTitle{Vers une architecture non-hiérarchique de cartes auto-organisatrices~: modèle et méthodes d'analyse}
+\ThesisDate{ 13 juin 2023}
 \ThesisAuthor{Noémie Gonnier}
 \ThesisUL
 % Jury:
