chapitre 5, V1 - a finir de relire

--- a/02-Architectures/source.tex
+++ b/02-Architectures/source.tex
@@ -10,7 +10,7 @@
 
 \begin{document}
 \graphicspath{{./figures},{02-Architectures/figures}}
-\chapter{Architectures de cartes auto-organisatrices}
+\chapter{Architectures de cartes auto-organisatrices}\label{chap:architectures}
 \minitoc
 
 \section{Introduction}
